addition on matplot

--- a/matplot_library.ipynb
+++ b/matplot_library.ipynb
@@ -1164,6 +1164,13 @@
     "plt.scatter(x,y2, s=sizes, alpha=.8)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Matplotlib Bars\n"
+   ]
   }
  ],
  "metadata": {
